# ethical-ai

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SETUP.md  build_package.py  index.html  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
src/eai/: compliance.py  fairness.py  monitoring.py
src/ethical_ai_validator/: __init__.py  cli.py  ethical_ai_validator.py
src/ethical_ai_validator/core/: __init__.py  validator.py
tests/: __init__.py  test_cli_and_eai_modules.py  test_eai_fairness_extended.py  test_ethical_ai_validator.py  test_report_branches.py  test_validator.py
